fixed home page

--- a/tester.html
+++ b/tester.html
@@ -7,7 +7,7 @@
 <body>
 
     <div class="topnav">
-        <a href="portfolio.html">⌂ home </a>
+        <a href="index.html">⌂ home </a>
         <a href="games.html"> ~games~ </a>
         <a href="stories.html"> ~stories~ </a>
         <a href="sketchbook.html"> ~sketchbook~ </a>
