--- a/misunderstood.html
+++ b/misunderstood.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="topnav">
-        <a href="portfolio.html">⌂ home </a>
+        <a href="index.html">⌂ home </a>
         <a href="games.html"> ~games~ </a>
         <a class="active" href="stories.html"> ~stories~ </a>
         <a href="sketchbook.html"> ~sketchbook~ </a>
