--- a/stories.html
+++ b/stories.html
@@ -292,7 +292,7 @@
     background-color: #CACFD6;
     background-image: url(storiesbackground.png);
     background-repeat: none;
-    background-size: contain;
+    background-size:cover;
   }
 
   h1 {
