--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </td>
 
       <td>
-        <img class="imgR" src="atanaturetheatre.png">
+        <img class="imgR" src="IMG_1183.jpg">
       </td>
     </tr>
 
