--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
       </td>
 
-      <td>
+      <td style="padding-bottom: 150px;">
         <img class="imgR" src="IMG_1183.jpg">
       </td>
     </tr>
@@ -85,14 +85,8 @@
   </table>
 
   <div class="contact">
-    <table>
-      <tr>
-        <td>
-          <h3>Interested in contacting me?</h3>
-          <h4>► olifftj@miamioh.edu</h4>
-          <h4>► myeventualworkemail@mail.com</h4>
-        </td>
-    </table>
+      <h3>Interested in contacting me?</h3>
+      <h4>► olifftj@miamioh.edu</h4>
   </div>
 
 
@@ -105,7 +99,7 @@
   /* probably can't use a lot of these images due to copyright */
 
   body {
-    background-color: CACFD6;
+    background-color: #CACFD6;
     width: 100%;
     height: 175%;
     margin: 0;
@@ -135,40 +129,32 @@
   }
 
   td {
-    padding-top: 150px;
-    width: 90%;
+    padding-top: 200px; 
+    width: 50%;
   }
 
   .contact {
     background-color: #355070;
-    width: 100%;
-    height: 100%;
     color: white;
     font-size: 25px;
-    text-align: left;
+    padding: 50px;
+    text-align:center;
+    font-weight:lighter;
     border-top:#50627f solid 60px;
-    padding: 0;
-  }
-
-  .contact tr {
-    width: 50%;
-    text-align: top;
-    padding-top: 30px;
-    color: white;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
   }
 
-  .contact h4 {
-    font-weight:lighter;
-  }
+ /* .contact table {
+    width: 50%;
+    color: white;
+    font-size: 70px;
+    padding: 50px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  } */
 
   table {
-    margin: auto;
-    width: 90%;
-    padding-top: 20px;
-    margin-bottom: 200px;
-    color: #355070;
-  }
+    padding: 50px;
+  } 
 
   @font-face {
     font-family: myFirstFont;
@@ -227,7 +213,7 @@
     border: 5px;
     border-color: #CACFD6;
     border-style: solid;
-    margin-left: 150px;
+    margin-left: 200px;
     float: left;
     clear: both;
   }
@@ -239,21 +225,20 @@
     box-shadow: 30px -30px 0 #355070;
     border-width: 5px;
     border-color: #CACFD6;
-    margin-right: 150px;
+    margin-right: 200px;
     border-style: solid;
     float: right;
     clear: both;
   }
 
   .pL {
-    margin-left: 100px;
-    margin-right: 200px;
+    margin-left: 200px;
     font-weight: bold;
     text-align: left;
   }
 
   .pR {
-    margin-right: 100px;
+    margin-right: 200px;
     font-weight: bold;
     text-align: left;
   }
