--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
       </td>
 
-      <td style="padding-bottom: 150px;">
+      <td>
         <img class="imgR" src="IMG_1183.jpg">
       </td>
     </tr>
@@ -132,6 +132,10 @@
     padding-top: 200px; 
     width: 50%;
   }
+  
+  tr {
+    padding-bottom: 200px;
+  }
 
   .contact {
     background-color: #355070;
@@ -144,16 +148,10 @@
     font-family:Verdana, Geneva, Tahoma, sans-serif;
   }
 
- /* .contact table {
-    width: 50%;
-    color: white;
-    font-size: 70px;
-    padding: 50px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-  } */
-
   table {
-    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 250px;
   } 
 
   @font-face {
