--- a/charactermaker.html
+++ b/charactermaker.html
@@ -490,6 +490,91 @@
                 "Clarita",
                 "Esther",
                 "Henley",
+                "Ximena",
+                "Hadassa",
+                "Calloway",
+                "Eileen",
+                "Rae",
+                "Leyland",
+                "Bellamy",
+                "Leonie",
+                "Ahmed",
+                "Almeida",
+                "Diet",
+                "Zoya",
+                "Bahari",
+                "Hayden",
+                "Karev",
+                "Sawyer",
+                "Elliot",
+                "Dakota",
+                "Atlas",
+                "Saylor",
+                "Teredesai",
+                "Parikh",
+                "Cosette",
+                "Satya",
+                "Winslet",
+                "Sachiel",
+                "Rook",
+                "Ryall",
+                "Eilish",
+                "Vasquez",
+                "Cortez",
+                "Sereia",
+                "Lyre",
+                "Laguna",
+                "Harbor",
+                "Eyre",
+                "Salil",
+                "Morrissey",
+                "Lachlan",
+                "Seacrest",
+                "Reyes",
+                "Harlan",
+                "Meyer",
+                "Gutierrez",
+                "Tesoro",
+                "Mantero",
+                "Azro",
+                "Rosloe",
+                "Crio",
+                "Monroe",
+                "Vaughn",
+                "Abbott",
+                "Aslan",
+                "Rhett",
+                "Caiolaidhe",
+                "Porter",
+                "Arlo",
+                "Callahan",
+                "Cairo",
+                "Drew",
+                "Hayes",
+                "Asa",
+                "Bensen",
+                "Everest",
+                "Rennon",
+                "Odette",
+                "Silas",
+                "Vesper",
+                "Aadhira",
+                "Neoma",
+                "Avrit",
+                "Arlet",
+                "Hanalei",
+                "Aysel",
+                "Crescent",
+                "August",
+                "Amaryllis",
+                "Serik",
+                "Zera",
+                "Imane",
+                "Gillian",
+                "Ilse",
+                "Leiserl",
+                "Colette",
+                "Alaric",
                 "Blythe"];
 
             var arr2 = ["Red",
