--- a/storygenerator.html
+++ b/storygenerator.html
@@ -927,7 +927,48 @@
                 "we'll be able to do something useful today",
                 "Motherly instincts and protections. The role of a woman who guides spirits through her realm on the way to their next destinations. Maybe death, maybe they’re dreaming, spaced out, reincarnating, etc. The story of her dealing with their stories and giving them the support they need along the way. Could be children, adults, animals, aliens, etc.",
                 "Two girls run into each other in the bathroom. One comments on the contents of the other’s shirt and they soon realize they’ve crossed paths before. Does the shirt wearer believe the rumors, and is the asker wary of this newfound recognition?",
-                "You said you were friends, but we can’t determine any consistent communication between you. (from some show on the tv)"];
+                "You said you were friends, but we can’t determine any consistent communication between you. (from some show on the tv)",
+                "Your words say one thing but your eyes and actions say another",
+                "And then I looked down into the abyss",
+                "Water off the duck's back",
+                "Being angry is like drinking poison and expecting the other one to die",
+                "the suffix 'ite' refers to a rock",
+                "A hero will kill you to save the world, but a villain will kill the world to save you... from the mom of someone who made a youtube comment",
+                "some of the scariest looking people can have the kindest hearts. evil can hide behind a smile. (from a youtube comment)",
+                "one person can only hold so much sadness",
+                "solar weather",
+                "bain of existence",
+                "'get the stuff that looks like the stuff'",
+                "eyes are a window to the soul and music is a key to the mind",
+                "pop star turned president",
+                "secret door",
+                "having a bunch of powers is great but that can all turn to chaos when coordinating who's doing what",
+                "give people really bad advice while they're preparing",
+                "princess charming",
+                "write a modern fairy tale",
+                "'you know he didn't even ask me my name that night' from lydia the bard's if cinderella was a villain",
+                "asteroid belt",
+                "a glimpse of how many lives you have touched",
+                "the bottom of space",
+                "trying to get info out of villains like with the short story of marella and fintan from kotlc",
+                "that's just how the cookie crumbles",
+                "story where people live in silos (wool series inspired)",
+                "'I will front stab my friends thank you' from Cleo in secret life smp",
+                "'why would someone pay that much for a box?'",
+                "the symbolism of lizzie burning cleo's house in secret life smp after cleo burned lizzie's entire base in last life",
+                "planet seeded with life from a different galaxy",
+                "'while you make pretty speeches...'",
+                "'he was born at a very young age'",
+                "calling people out for strange behavior like in secret life smp",
+                "now you're telling lies cause you were sworn to keep it (pretty little liars song lyrics I think)",
+                "double/triple agent",
+                "'what are you really so afraid of?'",
+                "lava powers",
+                "'I'm sleeping behind these glasses'",
+                "'can I take a message' 'you are the message' (from one of the scream movies)",
+                "I like the symbolism of Bianca returning to where she was helped by Aliya when she's trying to help herself (disney's backstage)",
+                "Carbon becomes diamond after really high pressures, jupiter may have a diamond bigger than the earth at its center; that's so cool",
+                ];
 
 
 
