working on enhancing pages

--- a/whoopsiedaisies.html
+++ b/whoopsiedaisies.html
@@ -15,27 +15,40 @@
         <a href="sketchbook.html"> ~sketchbook~ </a>
     </div>
 
-    <div style="padding-top: 150px;"></div>
 
-    <video width="800" height="500" controls>
-        <source src="WhoopsieDaisiesPitch.mp4"
-            type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <table style="display:grid">
 
-    <div style="padding-top: 250px;"></div>
+        <tr class="pitchTitle">
+            <td>
+                <h4 class="underlay">
+                    P I T C H
+                </h4>
+                <video width="800" height="500" controls>
+                    <source src="WhoopsieDaisiesPitch.mp4"
+                        type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </td>
+        </tr>
 
-    <div class="row">
+      <tr>
+            <td>
+                <div class="column2" style="text-align:left">
+                    <button><a href="Whoopsie Daisies CYOA (1).html" style="text-align: left">Whoopsie Daisies Game</a></button>
+                </div>  
+            </td>
 
-        <div class="column2" style="text-align:left">
-            <button><a href="Whoopsie Daisies CYOA (1).html" style="text-align: left">Whoopsie Daisies Game</a></button>
-        </div>
+            <td rowspan="2">
+                <div class="column2" style="text-align:left">
+                    <button><a href="WhoopsieDaisiesTwineFinishedd.html" style="text-align: left">Choose Your Own Story Game</a></button>
+                </div>
+            </td>
+        </tr>
 
-        <div class="column2" style="text-align:left">
-            <button><a href="WhoopsieDaisiesTwineFinishedd.html" style="text-align: left">Choose Your Own Story Game</a></button>
-        </div>
 
-    </div>
+
+    </table>
+
 
     <div style="padding-top: 100px;"></div>
 
@@ -83,12 +96,65 @@
         background-color: #CACFD6;
     }
 
+    tr.pitchTitle {
+        border-color: #355070;
+        border-width: 10px;
+        border-style: solid;
+        height: 400px;
+        width: 150vw;
+        background-color: #355070;
+        column-span: 2;
+    }
+
+    table {
+        border-style: solid;
+        border-width: 10px;
+        border-color: #355070;
+    }
+
+    tr {
+        border-style: solid;
+        border-width: 10px;
+        border-color: #355070;
+    }
+
+    td {
+        border-style: solid;
+        border-width: 10px;
+        border-color: #355070;  
+    }
+
+    h4.underlay {
+        z-index: 0;
+        display: inline-block;
+        font-size: 200px;
+        pointer-events: none;
+        margin-left: 250px;
+        font-family: pitchFont;
+        transform: scale(1.5, 2.7);
+        color: white;
+        vertical-align: center;
+        align-items: center;
+        font-weight:lighter;
+        opacity: 0.7;
+        column-span: 2;
+        width: 100vw;
+    }
+
+    
+
     /** why does it have the weird thing on the bottom and how do I add a border... also, I'm pretty sure my padding
     on all of this is messed up, I may need some help fixing that so that my border goes around the video and not its padding **/
     video {
-        margin: auto;
+        z-index: 1;
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 150px;
+        left: 0;
+        right: 0;
         text-align: center;
-        display: block;
+        opacity: 0.9;
     }
 
     h1 {
@@ -98,6 +164,11 @@
     @font-face {
         font-family: myFirstFont;
         src: url(CANDY___.otf);
+    }
+
+    @font-face {
+        font-family: pitchFont;
+        src: url(Bought\ Something\ Regular\ TTF.ttf);
     }
 
     .topnav {
