please unity please

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/portfolio.loader.js";
+      var loaderUrl = buildUrl + "/GitHub.loader.js";
       var config = {
-        dataUrl: buildUrl + "/portfolio.data",
-        frameworkUrl: buildUrl + "/portfolio.framework.js",
-        codeUrl: buildUrl + "/portfolio.wasm",
+        dataUrl: buildUrl + "/GitHub.data",
+        frameworkUrl: buildUrl + "/GitHub.framework.js",
+        codeUrl: buildUrl + "/GitHub.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "cse2513dproject2",
