--- a/games.html
+++ b/games.html
@@ -40,7 +40,7 @@
 
 <div class="row">
     <div class="column">
-        <button><a class="dropdown" href="index (2).html" style="text-align: left">WorldBuild</a>
+        <button><a class="dropdown" href="index.html" style="text-align: left">Save The Birdie</a>
             <div class="dropdown-content">
                 <p>based on the tutorial chronicles</p>
             </div>
