--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="topnav">
-    <a class="active" href="portfolio.html">⌂ home </a>
+    <a class="active" href="index.html">⌂ home </a>
     <a href="games.html"> ~games~ </a>
     <a href="stories.html"> ~stories~ </a>
     <a href="sketchbook.html"> ~sketchbook~ </a>
