--- a/games.html
+++ b/games.html
@@ -40,6 +40,16 @@
 
 <div class="row">
     <div class="column">
+        <button><a class="dropdown" href="fl.html" style="text-align: left">Finish Lime</a>
+            <div class="dropdown-content">
+                <p>space to pause, click to play, w to shoot your lemon... it's now a weapon. also, the rocks are bad.</p>
+            </div>
+        </button>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
         <button><a class="dropdown" href="birdie.html" style="text-align: left">Save The Birdie</a>
             <div class="dropdown-content">
                 <p>based on the tutorial chronicles</p>
