--- a/games.html
+++ b/games.html
@@ -72,6 +72,7 @@
         background-image: url("gamebackground.webp");
         background-blend-mode: soft-light;
         background-size:cover;
+        background-blend-mode: soft-light;
     }
 
     h1 {
