--- a/games.html
+++ b/games.html
@@ -40,7 +40,7 @@
 
 <div class="row">
     <div class="column">
-        <button><a class="dropdown" href="fl.html" style="text-align: left">Finish Lime</a>
+        <button><a class="dropdown" href="fl/fl.html" style="text-align: left">Finish Lime</a>
             <div class="dropdown-content">
                 <p>space to pause, click to play, w to shoot your lemon... it's now a weapon. also, the rocks are bad.</p>
             </div>
@@ -71,7 +71,7 @@
         background-color: #CACFD6;
         background-image: url("gamebackground.webp");
         background-blend-mode: soft-light;
-        background-size:cover;
+        background-size:contain;
         background-blend-mode: soft-light;
     }
 
