--- a/games.html
+++ b/games.html
@@ -69,10 +69,9 @@
         margin: 0;
         font-family: myFirstFont;
         background-color: #CACFD6;
-        background-image: url("gamebackground.webp");
+        background-image: url("gamebackground.png");
         background-blend-mode: soft-light;
         background-size:contain;
-        background-blend-mode: soft-light;
     }
 
     h1 {
