--- a/games.html
+++ b/games.html
@@ -71,7 +71,7 @@
         background-color: #CACFD6;
         background-image: url("gamebackground.png");
         background-blend-mode: soft-light;
-        background-size:contain;
+        background-size:cover;
     }
 
     h1 {
