--- a/sketchbook.html
+++ b/sketchbook.html
@@ -18,7 +18,9 @@
 </div>
 
 <body>
-  <div style="padding-top: 200px; padding-bottom: 100px;" class="carousel"></div>
+  <div style="padding-top: 200px;"></div>
+  <div class="carousel"></div>
+  <div style="padding-bottom: 100px;"></div>
 </body>
 </html>
 
