--- a/sketchbook.html
+++ b/sketchbook.html
@@ -19,7 +19,9 @@
 
 <body>
   <div style="padding-top: 200px;"></div>
-  <div class="carousel"></div>
+  <div class="carousel carousel"></div>
+  <div style="padding-bottom: 100px;"></div>
+  <div class="carousel carousel2"></div>
   <div style="padding-bottom: 100px;"></div>
 </body>
 </html>
