--- a/sketchbook.html
+++ b/sketchbook.html
@@ -21,6 +21,12 @@
   <div style="padding-top: 200px;"></div>
   <div class="carousel carousel"></div>
   <div style="padding-bottom: 100px;"></div>
+  <div class="carousel carousel3"></div>
+  <div style="padding-bottom: 100px;"></div>
+  <div class="carousel carousel4"></div>
+  <div style="padding-bottom: 100px;"></div>
+  <div class="carousel carousel5"></div>
+  <div style="padding-bottom: 100px;"></div>
   <div class="carousel carousel2"></div>
   <div style="padding-bottom: 100px;"></div>
 </body>
