real time and alterations

--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
+
+<!---
+
+blue
+brown
+competition of the elements
+cursed awakening
+feeling faint
+fly little butterfly
+full picture
+games
+indigo
+meaningless thesaurus
+memories of the past
+misunderstood
+princess graham
+riddling gleam
+royal maid
+she is with me because I have to
+sketchbook
+snowbound
+stories
+summer before 9th
+the planet
+the stone garden
+treasure
+unpacked
+whoopsie daisies
+worldbuild
+
+-->
+
 <html>
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="portfolio.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+  <title>⌂ Home</title>
 </head>
 <body>
   <div class="topnav">
@@ -9,6 +42,7 @@
     <a href="games.html"> ~games~ </a>
     <a href="stories.html"> ~stories~ </a>
     <a href="sketchbook.html"> ~sketchbook~ </a>
+    <a href="realtime.html"> ~real time~ </a>
   </div>
   <div>
     <h1>TALIA OLIFF</h1>
@@ -51,7 +85,7 @@
 
     <tr>
       <td>
-        <img class="imgL" src="meatsilks.jpg">
+        <img class="imgL" src="me on deck.PNG">
       </td>
       <td>
         <p class="pR">In addition to games, I'm working on a fantasy series as well as some other stories and novels!
@@ -72,7 +106,7 @@
       </td>
 
       <td>
-        <img class="imgR" src="IMG_1183.jpg">
+        <img class="imgR" src="me posed and cute.PNG">
       </td>
     </tr>
 
