--- a/meaninglessthesaurus.html
+++ b/meaninglessthesaurus.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="portfolio.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+    <title>Meaningless Thesaurus</title>
 </head>
 
 
@@ -17,6 +18,7 @@
         <a href="games.html"> ~games~ </a>
         <a class="active" href="stories.html"> ~stories~ </a>
         <a href="sketchbook.html"> ~sketchbook~ </a>
+        <a href="realtime.html"> ~real time~ </a>
     </div>
 
 </body>
