--- a/sketchbook.html
+++ b/sketchbook.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Carousel</title>
+  <title>~Sketchbook~</title>
   <link rel="stylesheet" href="carousel.css">
   <script defer src="carousel.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="portfolio.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
 </head>
 
 <div class="topnav">
@@ -15,6 +15,7 @@
   <a href="games.html"> ~games~ </a>
   <a href="stories.html"> ~stories~ </a>
   <a class="active" href="sketchbook.html"> ~sketchbook~ </a>
+  <a href="realtime.html"> ~real time~ </a>
 </div>
 
 <body>
