--- a/stories.html
+++ b/stories.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="portfolio.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+  <title>~Stories~</title>
 </head>
 
 <body>
@@ -11,6 +12,7 @@
     <a href="games.html"> ~games~ </a>
     <a class="active" href="stories.html"> ~stories~ </a>
     <a href="sketchbook.html"> ~sketchbook~ </a>
+    <a href="realtime.html"> ~real time~ </a>
   </div>
 
   <table>
@@ -160,6 +162,30 @@
       <td>
         <p class="pR">She lets her legs guide her, running as fast as she can in a nightgown and a flower crown
           decorating her long light brown hair...</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <a class="dropdown" href="theymaytrytodrownyourchildren.html" style="text-align: left">
+          <img class="imgL" src="tmttdyccover.png">
+        </a>
+      </td>
+
+      <td>
+        <p class="pR">The dolphin gleefully glided along in the shimmering water.</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <a class="dropdown" href="runnerup.htmlc:\Users\Talia Oliff\Pictures\profile pics\me posed and cute.PNG" style="text-align: left">
+          <img class="imgL" src="runnerupcover.png">
+        </a>
+      </td>
+
+      <td>
+        <p class="pR">Tulane gazed down at the blue ribbon she had one from last year’s competition, turning to look out the window, exhaling a deep sigh.</p>
       </td>
     </tr>
 
