--- a/whoopsiedaisies.html
+++ b/whoopsiedaisies.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="portfolio.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
+    <title>Whoopsie Daisies</title>
 </head>
 
 <body>
@@ -13,6 +14,7 @@
         <a class="active" href="games.html"> ~games~ </a>
         <a href="stories.html"> ~stories~ </a>
         <a href="sketchbook.html"> ~sketchbook~ </a>
+        <a href="realtime.html"> ~real time~ </a>
     </div>
 
 
