fixed runner up link

--- a/stories.html
+++ b/stories.html
@@ -179,7 +179,7 @@
 
     <tr>
       <td>
-        <a class="dropdown" href="runnerup.htmlc:\Users\Talia Oliff\Pictures\profile pics\me posed and cute.PNG" style="text-align: left">
+        <a class="dropdown" href="runnerup.html" style="text-align: left">
           <img class="imgL" src="runnerupcover.png">
         </a>
       </td>
