stories cw class week 1

--- a/stories.html
+++ b/stories.html
@@ -179,13 +179,38 @@
 
     <tr>
       <td>
+        <a class="dropdown" href="playtime.html" style="text-align: left">
+          <img class="imgL" src="Playtime Pic.png">
+        </a>
+      </td>
+
+      <td>
+        <p class="pR">“Did you steal that from Mommy?” Zoza whispers to me as I stifle giggles, sitting down on the soft, beige, carpet of my little sister’s room...</p>
+      </td>
+    </tr>
+
+    
+    <tr>
+      <td>
+        <a class="dropdown" href="thehappyslope.html" style="text-align: left">
+          <img class="imgL" src="The Happy Slope Pic.png">
+        </a>
+      </td>
+
+      <td>
+        <p class="pR">I trudge up the slanted slope, wiping sweat from my brow...</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
         <a class="dropdown" href="runnerup.html" style="text-align: left">
           <img class="imgL" src="runnerupcover.png">
         </a>
       </td>
 
       <td>
-        <p class="pR">Tulane gazed down at the blue ribbon she had one from last year’s competition, turning to look out the window, exhaling a deep sigh.</p>
+        <p class="pR">Tulane gazed down at the blue ribbon she had one from last year’s competition, turning to look out the window, exhaling a deep sigh...</p>
       </td>
     </tr>
 
