--- a/whoopsiedaisies.html
+++ b/whoopsiedaisies.html
@@ -18,22 +18,22 @@
     </div>
 
 
-    <table style="display:grid">
+    <table>
 
-        <tr class="pitchTitle">
+        <tr class="pitchTitle" style="background-color: #355070;">
+            <video width="800" height="500" controls>
+                <source src="WhoopsieDaisiesPitch.mp4"
+                    type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             <td>
                 <h4 class="underlay">
                     P I T C H
                 </h4>
-                <video width="800" height="500" controls>
-                    <source src="WhoopsieDaisiesPitch.mp4"
-                        type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
             </td>
         </tr>
 
-      <tr>
+     <!-- <tr>
             <td>
                 <div class="column2" style="text-align:left">
                     <button><a href="Whoopsie Daisies CYOA (1).html" style="text-align: left">Whoopsie Daisies Game</a></button>
@@ -45,7 +45,7 @@
                     <button><a href="WhoopsieDaisiesTwineFinishedd.html" style="text-align: left">Choose Your Own Story Game</a></button>
                 </div>
             </td>
-        </tr>
+        </tr> -->
 
 
 
@@ -90,7 +90,7 @@
     } 
     
     body {
-        background-color: CACFD6;
+        background-color: #CACFD6;
         width: 100%;
         height: 175%;
         margin: 0;
@@ -103,61 +103,40 @@
         border-width: 10px;
         border-style: solid;
         height: 400px;
-        width: 150vw;
+        width: 100vw;
         background-color: #355070;
-        column-span: 2;
+        vertical-align: center;
     }
 
     table {
-        border-style: solid;
-        border-width: 10px;
-        border-color: #355070;
-    }
-
-    tr {
-        border-style: solid;
-        border-width: 10px;
-        border-color: #355070;
-    }
-
-    td {
-        border-style: solid;
-        border-width: 10px;
-        border-color: #355070;  
+        /* border-width: 10px;
+         border-color: #355070;  */
+        width: 100%;
     }
 
     h4.underlay {
+        width: 100%;
+        text-align: center;
+        font-family: pitchFont;
+        opacity: 0.3;
+        color: white;
+        font-size: 17vw;
         z-index: 0;
         display: inline-block;
-        font-size: 200px;
-        pointer-events: none;
-        margin-left: 250px;
-        font-family: pitchFont;
-        transform: scale(1.5, 2.7);
-        color: white;
-        vertical-align: center;
-        align-items: center;
-        font-weight:lighter;
-        opacity: 0.7;
-        column-span: 2;
-        width: 100vw;
+        transform: scaleY(2.5);
     }
 
     
 
     /** why does it have the weird thing on the bottom and how do I add a border... also, I'm pretty sure my padding
     on all of this is messed up, I may need some help fixing that so that my border goes around the video and not its padding **/
-    video {
-        z-index: 1;
-        position: absolute;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 150px;
-        left: 0;
-        right: 0;
-        text-align: center;
-        opacity: 0.9;
-    }
+   video {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    z-index: 1;
+} 
+
 
     h1 {
         color: black;
