updated first two game pages

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>~Sketchbook~</title>
   <link rel="stylesheet" href="carousel.css">
-  <script defer src="carousel.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
 </head>
 
@@ -82,7 +81,7 @@ body {
 </style>
 
 
-<script>
+<script defer src="carousel.js">
   //https://www.cssscript.com/flip-element-carousel/
   //MIT License Copyright (c) 2022 Benjamin Kim
 
@@ -103,4 +102,5 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE. */
+
 </script>
