--- a/worldbuild.html
+++ b/worldbuild.html
@@ -42,7 +42,7 @@
                 <div style="padding-bottom: 100px;"></div>
                 <div class="carousel carousel4"></div>
             </td>
-        </tr>
+        
 
         <div class = "two">
             <div style="padding-top: 200px;"></div>
@@ -55,6 +55,8 @@
             <div class="carousel carousel2"></div>
             <div style="padding-bottom: 100px;"></div>
         </div>
+
+    </tr>
 
      <!-- <tr>
             <div class="column2" style="text-align:left">
@@ -82,6 +84,62 @@
 
 
     </table>
+
+    <div style="padding-bottom: 100px;"></div>
+
+<table class="pad" style="background-color: #355070;">
+
+    <tr>
+        <td>
+            <div style="text-align:left">
+                <button><a href="outfit.html" style="text-align: left">Outfit Generator</a></button>
+            </div>  
+        </td>
+    </tr>
+
+ </table>
+
+ <div style="padding-bottom: 100px;"></div>
+
+ <table class="pad" style="background-color: #355070;">
+
+    <tr>
+        <td>
+            <div style="text-align:left">
+                <button><a href="storygenerator.html" style="text-align: left">Story Generator</a></button>
+            </div>
+        </td>  
+    </tr>
+
+</table>
+
+<div style="padding-bottom: 100px;"></div>
+
+<table class="pad" style="background-color: #355070;">
+
+    <tr>
+        <td>
+            <div style="text-align:left">
+                <button><a href="charactermaker.html" style="text-align: left">Character Generator</a></button>
+            </div>
+        </td>  
+    </tr>
+
+</table>
+
+<div style="padding-bottom: 100px;"></div>
+
+<table class="pad" style="background-color: #355070;">
+
+    <tr>
+        <td>
+            <div style="text-align:left">
+                <button><a href="animals.html" style="text-align: left">Animal Generator</a></button>
+            </div>
+        </td>  
+    </tr>
+
+</table>
 
 </body>
 <script src="carousel.js">//https://www.cssscript.com/flip-element-carousel/
@@ -344,4 +402,19 @@
             max-width: 100%;
         }
     } 
+
+    .pad td {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        background-color: #355070;
+    }
+
+    .pad a {
+        color: #CACFD6;
+        text-decoration: none;
+    }
+
+    .pad a:hover {
+        color: gray;
+    }
 </style>
