--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ worldbuild
   <div>
     <h1>TALIA OLIFF</h1>
     <h2>coder, writer, & game designer.</h2>
+    <h2>*please note this website is a work in progress*</h2>
   </div>
 
 
