--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 
     <div class="topnav">
         <a href="index.html">⌂ home </a>
-        <a class="active" href="games.html"> ~games~ </a>
+        <a class="active" href="games.html"> ~games ( + tech )~ </a>
         <a href="stories.html"> ~stories~ </a>
         <a href="sketchbook.html"> ~sketchbook~ </a>
         <a href="realtime.html"> ~real time~ </a>
@@ -35,6 +35,26 @@
         <button><a class="dropdown" href="worldbuild.html" style="text-align: left">WorldBuild</a>
             <div class="dropdown-content">
                 <p>see the progress of this game so far as well as play some finished minigames!</p>
+            </div>
+        </button>
+    </div>
+</div>
+
+<div class="row" style="padding-top: 100px">
+    <div class="column">
+        <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Progress Pal</a>
+            <div class="dropdown-content">
+                <p>Coursework -> cool extension that will be released at some point!</p>
+            </div>
+        </button>
+    </div>
+</div>
+
+<div class="row" style="padding-top: 100px">
+    <div class="column">
+        <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Kitchen Island</a>
+            <div class="dropdown-content">
+                <p>Coursework -> semester long project with a studio!</p>
             </div>
         </button>
     </div>
