--- a/games.html
+++ b/games.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div class="row" style="padding-top: 100px">
+<div class="row">
     <div class="column">
         <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Progress Pal</a>
             <div class="dropdown-content">
@@ -50,9 +50,9 @@
     </div>
 </div>
 
-<div class="row" style="padding-top: 100px">
+<div class="row">
     <div class="column">
-        <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Kitchen Island</a>
+        <button><a class="dropdown" href="https://kitchenisland.itch.io/re-treat" style="text-align: left">Kitchen Island</a>
             <div class="dropdown-content">
                 <p>Coursework -> semester long project with a studio!</p>
             </div>
