--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
     <div class="column">
         <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Whoopsie Daisies</a>
             <div class="dropdown-content">
-                <p>video, prototype games, and artwork!</p>
+                <p>Coursework -> video, prototype games, and artwork! (work in progress)</p>
             </div>
         </button>
     </div>
@@ -52,7 +52,7 @@
 
 <div class="row">
     <div class="column">
-        <button><a class="dropdown" href="https://kitchenisland.itch.io/re-treat" style="text-align: left">Kitchen Island</a>
+        <button><a class="dropdown" href="https://kitchenisland.itch.io/re-treat" style="text-align: left">Kitchen Island: Re-Treat</a>
             <div class="dropdown-content">
                 <p>Coursework -> semester long project with a studio!</p>
             </div>
