--- a/games.html
+++ b/games.html
@@ -74,7 +74,7 @@
     <div class="column">
         <button><a class="dropdown" href="birdie.html" style="text-align: left">Save The Birdie</a>
             <div class="dropdown-content">
-                <p>based on the tutorial chronicles</p>
+                <p>*mouse sensitivity needs to be fixed</p>
             </div>
         </button>
     </div>
