--- a/games.html
+++ b/games.html
@@ -42,7 +42,7 @@
 
 <div class="row">
     <div class="column">
-        <button><a class="dropdown" href="whoopsiedaisies.html" style="text-align: left">Progress Pal</a>
+        <button><a class="dropdown" href="https://www.youtube.com/watch?v=2R9tEjwtBqU" style="text-align: left">Progress Pal</a>
             <div class="dropdown-content">
                 <p>Coursework -> cool extension that will be released at some point!</p>
             </div>
