--- a/games.html
+++ b/games.html
@@ -44,7 +44,9 @@
     <div class="column">
         <button><a class="dropdown" href="https://www.youtube.com/watch?v=2R9tEjwtBqU" style="text-align: left">Progress Pal</a>
             <div class="dropdown-content">
-                <p>Coursework -> cool extension that will be released at some point!</p>
+                <p>Coursework -> cool extension that will be released at some point! Worked on with Brendan Sears, Will Rozak, 
+                    Drishya Pradhan, & Ryan Horak
+                    </p>
             </div>
         </button>
     </div>
