--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     <div class="column">
         <button><a class="dropdown" href="https://kitchenisland.itch.io/re-treat" style="text-align: left">Kitchen Island Re Treat</a>
             <div class="dropdown-content">
-                <p>Coursework -> semester long project with a studio!</p>
+                <p>Coursework -> semester long project with a studio! Worked on with Addie Drake, Brooke Banfill, Kameron Edmier, and Sam Bowsher</p>
             </div>
         </button>
     </div>
